--- a/src/apps/client/ui/pages/Contacts/Contacts.css
+++ b/src/apps/client/ui/pages/Contacts/Contacts.css
@@ -1,7 +1,13 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value black from '../../../../../css/colors.css';
+@value gray3 from '../../../../../css/colors.css';
 
 .contacts {
+    background-color: gray3;
+    padding-bottom: 30px;
+}
+
+.contactsContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -65,6 +71,10 @@
 
 .info {
     margin-top: 30px;
+
+    @media (max-width: 600px) {
+        margin-top: 20px;
+    }
 }
 
 .phonesContainer,
@@ -92,7 +102,7 @@
     margin: 30px 0;
 
     @media (max-width: 600px) {
-        margin: 30px 0 15px;
+        margin: 30px 0;
     }
 }
 
@@ -137,23 +147,36 @@
     }
 }
 
-.map {
+.mapContainer {
     margin-bottom: 30px;
-    background: url('./img/map.jpg') no-repeat center;
-    background-size: contain;
     max-width: 1240px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media (max-width: 600px) {
+        width: 100vw;
+    }
+}
+
+.getDirectionsBtn {
+    @mixin removeDefaultButton;
+    cursor: pointer;
+    margin-bottom: 30px;
+    background-color: black;
+    font-family: Rounded Elegance;
+    font-size: 18px;
+    line-height: 21px;
+    color: whiteBasic;
+    padding: 10px 20px;
+}
+
+.map {
     width: 100%;
     height: 439px;
 
-    @media (max-width: 1270px) {
-        height: 0;
-        padding-top: 35.4%;
-    }
-
-    @media (max-width: 600px) {
-        background-size: cover;
-        width: 100vw;
+    @media (max-width: 380px) {
         height: 230px;
-        padding-top: 0;
     }
 }
