--- a/src/apps/client/ui/pages/Partners/Partners.css
+++ b/src/apps/client/ui/pages/Partners/Partners.css
@@ -3,12 +3,18 @@
 @value gray5 from '../../../../../css/colors.css';
 
 .partners {
-    position: relative;
     height: 100%;
+    background-color: gray5;
+    padding-bottom: 40px;
+
+    @media (max-width: 600px) {
+        padding-bottom: 30px;
+    }
 }
 
 .partnersContainer {
     background-color: whiteBasic;
+    height: calc(100% - 40px);
 }
 
 .content {
@@ -86,7 +92,7 @@
     }
 
     @media (max-width: 600px) {
-        margin: 20px 0 60px;
+        margin: 20px 0 30px;
     }
 }
 
@@ -158,16 +164,4 @@
     color: rgba(35, 35, 35, 0.7);
     max-width: 207px;
     width: 100%;
-}
-
-.bottomBackground {
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    background-color: gray5;
-    bottom: 0;
-
-    @media (max-width: 600px) {
-        height: 30px;
-    }
 }
