--- a/src/apps/client/ui/components/NotFoundPage/NotFoundPage.css
+++ b/src/apps/client/ui/components/NotFoundPage/NotFoundPage.css
@@ -16,6 +16,9 @@
 .contentWrap {
     background: whiteBasic;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
